# fisher_information_embedding

./: .gitignore  LICENSE  README.md  env.yml  env_cuda.yml  pyproject.toml
experiments/: train_citation.py  train_citation_sup.py  train_ogb_node.py  train_ogb_node_sup_ns.py
fie/: fisher_embeddings.py  layers.py  models.py  ops.py  utils.py
simulations/: dist_vs_kl.py  dist_vs_kl.tex  readme.md
tsne/: fie_sup_tsne.py  fie_unsup_tsne.py  gat_tsne.py
